# ros_template_packages

./: README.md
cpp_oop/: CMakeLists.txt  package.xml
cpp_oop/include/cpp_oop/: NumberCounter.h
cpp_oop/src/: NumberCounter.cpp  number_counter.cpp
read_camera/: CMakeLists.txt  package.xml
read_camera/include/: camera_modules.h
read_camera/launch/: read_camera.launch
read_camera/params/: camera_params.yaml
read_camera/src/: camera_modules.cpp  read_cam.cpp
useful_codes/: heap.cpp
